# asthra

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  BACKEND_CLEANUP_PLAN.md  CLAUDE.md  CLEANUP_EXECUTION_REPORT.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CODEGEN_CLEANUP_STATUS.md  COMPILER_README.md  Dockerfile.bdd-test  Doxyfile.in  FINAL_CODEGEN_CLEANUP_REPORT.md  GEMINI.md  LICENSE  MIGRATION_TO_LLVM_COMPLETE.md  OLD_CODEGEN_CLEANUP_REPORT.md  OLD_CODEGEN_REMOVAL_STRATEGY.md  PHASE_5_COMPLETION_SUMMARY.md  README.md  SECURITY.md  TEST_REVIEW_REPORT.md  WINDOWS_REMOVAL_PLAN.md  build-asthra.sh  build.sh  build.zig  build.zig.zon  cleanup_old_codegen.sh  grammar.txt  rebase-script.sh  rebase-todo-squash.txt  rebase-todo.txt  run-bdd-tests-local.sh  run-bdd-tests-podman.sh  run-tests.sh  test.asthra  test.bat  test.ll  (+3 more)
ampu/: .gitignore  Cargo.toml  E2E_TESTING_SUMMARY.md  README.md  TESTING_RECOMMENDATION.md  run_e2e_tests.sh
ampu/docs/: plan.md
ampu/src/: error.rs  lib.rs  main.rs
ampu/tests/: README.md  e2e_tests.rs  import_validation_tests.rs  integration_tests.rs  language_tests.rs
bdd/: BDD_BEST_PRACTICES.md  CMakeLists.txt  CONTRIBUTING.md  CURRENT_FAILING_SCENARIOS.md  FAILING_SCENARIOS_REPORT.md  FAILING_SCENARIOS_SUMMARY.md  PHASE4_FIX_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SCRIPT_ANALYSIS_REPORT.md  WIP_TAG_FILTERING.md  fix_failing_scenarios.sh  test_program
bdd/examples/: boolean_operators_enhanced_example.c  boolean_operators_with_wip.c  minimal_wip_example.c
bdd/features/: annotations.feature  arithmetic_operators.feature  array_literals.feature  associated_functions.feature  await_expressions.feature  bitwise_operators.feature  boolean_operators.feature  comment_syntax.feature  comparison_operators.feature  compiler_basic.feature  composite_types.feature  const_declarations.feature  control_flow_loops.feature  enum_patterns.feature  extern_declarations.feature  ffi_integration.feature  function_calls.feature  generic_types.feature  if_conditions.feature  import_system.feature  logical_operators.feature  mutability_system.feature  numeric_literals.feature  operator_precedence.feature  package_declaration.feature  pattern_bindings.feature  pointer_operations.feature  postfix_expressions.feature  predeclared_identifiers.feature  primitive_types.feature  return_statements.feature  sizeof_operator.feature  slice_operations.feature  spawn_statements.feature  spawn_with_handle.feature  special_types.feature  string_literals.feature  struct_patterns.feature  tuple_literals.feature  tuple_patterns.feature  (+4 more)
bdd/fixtures/: README.md
bdd/steps/: bdd_test_framework.c  bdd_test_framework.h  bdd_unit_common.h  bdd_utilities.c  bdd_utilities.h  cli_steps.c  common_steps.c  compilation_steps.c  if_conditions_steps.c  if_conditions_steps_refactored.c  parser_steps.c  semantic_steps.c  semantic_steps_refactored.c
bdd/support/: bdd_support.c  bdd_support.h  migrate_to_enhanced_bdd.py
runtime/: CMakeLists.txt  asthra_concurrency_bridge_modular.h  asthra_concurrency_callbacks.c  asthra_concurrency_channels.c  asthra_concurrency_channels.h  asthra_concurrency_core.c  asthra_concurrency_core.h  asthra_concurrency_patterns.c  asthra_concurrency_patterns.h  asthra_concurrency_tasks.c  asthra_concurrency_threads.c  asthra_concurrency_threads_modular.h  asthra_crypto.c  asthra_crypto.h  asthra_enum_support.c  asthra_enum_support.h  asthra_ffi_error.c  asthra_ffi_error.h  asthra_ffi_memory.h  asthra_ffi_memory_modular.h  asthra_ffi_runtime.c  asthra_int128.c  asthra_int128.h  asthra_integration_stubs.c  asthra_integration_stubs.h  asthra_main.c  asthra_memory.c  asthra_memory.h  asthra_result.c  asthra_runtime.h  asthra_runtime_core.c  asthra_runtime_minimal.h  asthra_runtime_modular.h  asthra_safety.h  asthra_safety_common.h  asthra_safety_concurrency_errors.c  asthra_safety_concurrency_errors.h  asthra_safety_core.c  asthra_safety_core.h  asthra_safety_extended_modular.h  (+34 more)
runtime/collections/: asthra_runtime_slices.h
runtime/concurrency/: asthra_concurrency_atomics.h  asthra_concurrency_barrier.c  asthra_concurrency_channels.h  asthra_concurrency_condvar.c  asthra_concurrency_condvar.h  asthra_concurrency_core.h  asthra_concurrency_gc_roots.c  asthra_concurrency_gc_roots.h  asthra_concurrency_mutex.c  asthra_concurrency_mutex.h  asthra_concurrency_patterns.h  asthra_concurrency_rwlock.c  asthra_concurrency_rwlock.h  asthra_concurrency_semaphore.c  asthra_concurrency_sync.h  asthra_concurrency_tasks.h  asthra_concurrency_thread_registry.c  asthra_concurrency_thread_registry.h  asthra_concurrency_threads_common.c  asthra_concurrency_threads_common.h  asthra_runtime_sync.h  asthra_runtime_tasks.h
runtime/core/: asthra_runtime_core.h
runtime/crypto/: asthra_runtime_crypto.h
runtime/diagnostics/: asthra_runtime_logging.h
runtime/errors/: asthra_runtime_errors.h
runtime/ffi/: asthra_runtime_ffi.h
runtime/memory/: asthra_ffi_memory_core.c  asthra_ffi_memory_core.h  asthra_ffi_ownership.c  asthra_ffi_ownership.h  asthra_ffi_result.c  asthra_ffi_result.h  asthra_ffi_slice.c  asthra_ffi_slice.h  asthra_ffi_string.c  (+2 more)
src/: CMakeLists.txt  ast.zig  cli.c  cli.h  codegen.zig  codegen_closures.zig  codegen_control.zig  codegen_exprs.zig  codegen_hof.zig  codegen_stdlib.zig  codegen_stmts.zig  codegen_types.zig  commands.zig  compiler.c  compiler.h  diagnostics.zig  fetcher.zig  lexer.zig  main.c  main.zig  package.zig  parser.zig  parser_exprs.zig  parser_stmts.zig  parser_tests.zig  parser_tests_exprs.zig  parser_tests_stmts.zig  platform.c  platform.h  platform_utils.c  platform_utils.h  sema.zig  semver.zig  static_analysis.c  static_analysis.h  token.zig  toml.zig  version.h
stdlib/: CMakeLists.txt
tests/: CMakeLists.txt  run_examples.sh
tools/: CMakeLists.txt  ast-visualizer.c  asthra-link.c  formatter.c  formatter_new.c  formatter_simple.c  fuzzing-harness.c  grammar-validator.c  language-server.c  linter.c  performance-profiler.c  symbol-inspector.c  test-generator.c  test_framework.c  test_input.asthra  test_runner.c
(+2522 files in other folders)
